# atm10

./: .gitignore  CLAUDE.md  README.md
KubeShop/kubejs/server_scripts/: kubeshop.js
KubeShop/resourcepack/kubeshop-resources/: pack.mcmeta
config/ftbquests/quests/chapters/: welcome.snbt
discord_bot/: .env.example  Dockerfile  bot.py  config.py  database.py  docker-compose.yml  models.py  pyproject.toml
discord_bot/tests/: __init__.py  test_bot.py  test_config.py  test_database.py  test_models.py
kubejs/config/: discord.json
kubejs/data/kubeshop/loot_modifiers/: coin_abandoned_mineshaft.json  coin_ancient_city.json  coin_ancient_city_ice_box.json  coin_apotheosis_brutal.json  coin_apotheosis_brutal_rotate.json  coin_apotheosis_swarm.json  coin_apotheosis_valuable.json  coin_atum_pharaoh.json  coin_bastion_bridge.json  coin_bastion_hoglin_stable.json  coin_bastion_other.json  coin_bastion_treasure.json  coin_buried_treasure.json  coin_desert_pyramid.json  coin_end_city_treasure.json  coin_igloo_chest.json  coin_jungle_temple.json  coin_nether_bridge.json  (+44 more)
kubejs/server_scripts/: coin_loot.js  discord_chat.js  discord_command.js  kubeshop.js  restart_command.js  rules_command.js  vote_command.js
kubeshop/: kubeshop.js
votifier_service/: .env.example  .gitignore  Dockerfile  config.py  docker-compose.test.yml  docker-compose.yml  main.py  pending_rewards.py  pyproject.toml  rcon_client.py  votifier_protocol.py
votifier_service/tests/: __init__.py  conftest.py  test_config.py  test_main.py  test_rcon_client.py  test_votifier_protocol.py
(+18 files in other folders)
